se sumo galeria de imagenes

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <div class="climaDiv"></div>
         </div>
         <div class="grid grid2">
-          <h5>Citas Famosas</h5>
-          <div class="citas">
+          <h5>Paseo por el Mundo</h5>
+          <div class="imagenMundo">
           </div>
           <div class="btnCita">
-          <button type="button" class="btn btn-sm cita quote">Generar Cita</button>
+          <button type="button" class="btn btn-sm cita quote">Mostrar Imagen</button>
           <button type="button" class="btn btn-sm cita cerrar">Cerrar</button>
           </div>
       </div>
@@ -69,9 +69,8 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-
     <script src="app.js"></script>
     <script src="apiRest.js"></script>
-    <script src="quote.js"></script>
+    <script src="galeria.js"></script>
   </body>
 </html>
